packages/front-end/styles/global.scss
/* ... */
html {
  scroll-behavior: smooth;
}

.variationWrap {
  img {
    max-width: 200px;
  }
}
.idea {
  .idea-card {
    clear: both;
  }
}

.learnings,
.ideas {
  .edit,
  .delete {
    cursor: pointer;
    color: colors.$darker-blue;
    margin: 0 4px;
    svg {
      fill: colors.$blue;
    }
  }
  .lower-card-details {
    font-size: 0.9rem;
  }
  .filters {
    .sortby {
      line-height: 2.5rem;
      margin-right: 2rem;
    }
  }
}
.moremenu {
  svg {
    fill: var(--text-color-muted);
  }
}
.cursor-pointer {
  cursor: pointer;
}
.bg-impact {
  background-color: colors.$bg-impact;
}
.dropdown-underline {
  position: relative;
  border-radius: 0 !important;
  height: 24px;
  padding: 0 1px;
  border-bottom: 1px solid var(--border-color-300);
  top: 1px;
  cursor: pointer;
  span.hover {
    color: var(--text-dark);
  }
  &:hover {
    border-bottom: 1px solid var(--text-link-hover-color);
    span.hover {
      color: var(--text-link-hover-color);
    }
  }
  .sub {
    position: absolute;
    right: 1px;
    bottom: -13px;
    font-size: 10px;
  }
}
.dropdown-underline-disabled {
  position: relative;
  border-radius: 0 !important;
  height: 24px;
  border-bottom: 1px transparent;
  top: 1px;
  .sub {
    position: absolute;
    right: 0;
    bottom: -7px;
    font-size: 10px;
  }
}
.select-dropdown-underline {
  position: relative !important;
  top: 1px !important;

  .gb-select__control {
    border-radius: 0 !important;
    border: 0 transparent !important;
    border-bottom: 1px solid var(--border-color-300) !important;
    height: 24px !important;
    min-height: initial !important;
    cursor: pointer !important;
    .gb-select__value-container {
      position: relative !important;
      top: -1px !important;
      padding: 0 !important;
      .gb-select__input-container {
        margin: 0 !important;
        padding: 0 !important;
      }
      .gb-select__single-value {
        margin: 0 !important;
        padding: 0 1px !important;
        color: var(--text-dark) !important;
        &:after {
          display: inline-block;
          margin-left: 0.255em;
          vertical-align: 0.255em;
          content: "";
          border-top: 0.3em solid;
          border-right: 0.3em solid transparent;
          border-bottom: 0;
          border-left: 0.3em solid transparent;
          color: var(--text-color-main) !important;
        }
      }
    }
    .gb-select__indicators {
      display: none;
    }
    &:hover {
      border-bottom: 1px solid var(--text-link-hover-color) !important;
      .gb-select__value-container .gb-select__single-value {
        color: var(--text-link-hover-color) !important;
        &:after {
          color: var(--text-color-main) !important;
        }
      }
    }
    &.gb-select__control--is-focused {
      box-shadow: none !important;
    }
  }
}

#modal {
  position: relative;
  z-index: 999999;
}

.moremenucontents {
  position: absolute;
  background-color: var(--surface-background-color);
  z-index: 1200;
  right: 10px;
  top: 20px;
  padding: 10px;
  border: rgba(0, 0, 0, 0.3);
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);

  &.closed {
    display: none;
  }
}

.edit-right {
  float: right;
}
.delete-right {
  float: right;
}
.flexwrap {
  flex-wrap: wrap;
}
.flexbreak,
.flex-break {
  flex-basis: 100%;
  height: 0;
}

.onboarding-modal {
  top: 30px;
  width: 95%;
  left: 2.5%;
  z-index: 130;

  .col a {
    height: 100%;
  }

  img {
    height: 120px;
  }

  @media (min-width: 850px) {
    top: 30px;
    width: 800px;
    left: 50%;
    margin-left: -400px;

    img {
      height: 180px;
    }
  }

  .onboarding-choice {
    transition: background-color 0.3s;
    &:hover {
      background: rgba(124, 69, 234, 0.1);
    }
  }
}

.getstarted {
  .gsbox {
    .card-body.extra-padding {
      padding: 2.25rem;
    }
    .active-step {
      border: 1px solid rgba(29, 99, 234, 0.76) !important;
    }
  }
  .boxlink {
    &:hover {
      text-decoration: none;
    }
    p {
      color: colors.$gray-900;
    }
  }
  .secondary-box {
    background: linear-gradient(
        0deg,
        rgba(124, 69, 234, 0.06),
        rgba(124, 69, 234, 0.06)
      ),
      #ffffff;
    box-shadow: 0px 1px 3px rgba(23, 18, 33, 0.08);
    border-radius: 3px;

    & > div {
      background-image: url("/images/getstarted-explore.svg");
      background-repeat: no-repeat;
      background-position: bottom right;
      min-height: 110px;
    }
  }
  .step-done {
    .checkmark {
      color: #089635;
      svg {
        background-color: rgba(89, 197, 123, 0.2);
        padding: 6px;
        border-radius: 15px;
        width: 26px;
        height: 26px;
      }
    }
    .complete {
      display: inline-block !important;
    }
  }
  .action-link {
    font-weight: 700;
  }
}

.new-share {
  .selected-area {
    background-color: rgba(27, 103, 235, 0.036);
  }
  .shared-exp-div {
    border: 1px solid var(--border-color-300);
    background-color: var(--surface-background-color);

    &:hover {
      .delete-exp {
        visibility: visible;
      }
    }
  }
  .drag-handle {
    color: rgb(194, 194, 194);
    svg path {
      stroke: #bbb;
    }
  }
  .checkmark {
    color: #fff;
    visibility: hidden;
  }
  .delete-exp {
    visibility: hidden;
  }
  tr {
    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
  }
  .selected {
    background-color: rgba(30, 181, 98, 0.139);
    .checkmark {
      color: rgb(30, 181, 98);
      visibility: visible;
    }
  }
}

.new-presentations {
  .metainfo {
    font-size: 0.8em;
  }
  .selectalble {
    width: calc(50% - 10px);
    margin-right: 10px;
    .selected-number {
      position: absolute;
      right: 0.8em;
      top: 0.3em;
      color: colors.$dark-green;
    }
  }
  .selected {
    border-color: colors.$dark-green;
    background-color: colors.$lighter-green;
  }
  .scrollarea {
    max-height: 300px;
    overflow-y: scroll;
  }
}
/* ... */

